// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly no elements 1`] = `
<ObjectPanel
  elem={null}
>
  <div
    className="container"
    id="object-panel"
  >
    <div
      className="tools"
    >
      <div
        className="row"
      >
        <div
          className="half left sep"
        >
          <div
            className="btn disabled"
            id="hdist"
            onClick={null}
            title="Horizontal Distribute"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-hdist.svg"
            />
          </div>
          <div
            className="btn"
            id="top_align"
            onClick={[MockFunction]}
            title="Top Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-top.svg"
            />
          </div>
          <div
            className="btn"
            id="middle_align"
            onClick={[MockFunction]}
            title="Middle Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-mid.svg"
            />
          </div>
          <div
            className="btn"
            id="bottom_align"
            onClick={[MockFunction]}
            title="Bottom Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-bot.svg"
            />
          </div>
        </div>
        <div
          className="half right"
        >
          <div
            className="btn disabled"
            id="vdist"
            onClick={null}
            title="Vertical Distribute"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-vdist.svg"
            />
          </div>
          <div
            className="btn"
            id="left_align"
            onClick={[MockFunction]}
            title="Left Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-left.svg"
            />
          </div>
          <div
            className="btn"
            id="center_align"
            onClick={[MockFunction]}
            title="Center Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-mid.svg"
            />
          </div>
          <div
            className="btn"
            id="right_align"
            onClick={[MockFunction]}
            title="Right Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-right.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="half left"
        >
          <div
            className="btn"
            id="group"
            onClick={[Function]}
            title="Group"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-group.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="ungroup"
            onClick={null}
            title="Ungroup"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-ungroup.svg"
            />
          </div>
        </div>
        <div
          className="half right"
        >
          <div
            className="btn disabled"
            id="union"
            onClick={null}
            title="Union"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-union.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="subtract"
            onClick={null}
            title="Subtract"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-subtract.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="intersect"
            onClick={null}
            title="Intersect"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-intersect.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="difference"
            onClick={null}
            title="Difference"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-diff.svg"
            />
          </div>
        </div>
      </div>
    </div>
    <DummyDimensionPanel
      elem={null}
      getDimensionValues={[MockFunction]}
      updateDimensionValues={[MockFunction]}
    >
      <div>
        This is dummy DimensionPanel
      </div>
    </DummyDimensionPanel>
    <DummyOptionsPanel
      elem={null}
      polygonSides={5}
      rx={1}
      updateDimensionValues={[MockFunction]}
      updateObjectPanel={[MockFunction]}
    >
      <div>
        This is dummy OptionsPanel
      </div>
    </DummyOptionsPanel>
    <DummyActionsPanel
      elem={null}
    >
      <div>
        This is dummy ActionsPanel
      </div>
    </DummyActionsPanel>
  </div>
</ObjectPanel>
`;

exports[`should render correctly one element is g element 1`] = `
<ObjectPanel
  elem={
    <g
      id="svg_1"
    />
  }
>
  <div
    className="container"
    id="object-panel"
  >
    <div
      className="tools"
    >
      <div
        className="row"
      >
        <div
          className="half left sep"
        >
          <div
            className="btn disabled"
            id="hdist"
            onClick={null}
            title="Horizontal Distribute"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-hdist.svg"
            />
          </div>
          <div
            className="btn"
            id="top_align"
            onClick={[MockFunction]}
            title="Top Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-top.svg"
            />
          </div>
          <div
            className="btn"
            id="middle_align"
            onClick={[MockFunction]}
            title="Middle Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-mid.svg"
            />
          </div>
          <div
            className="btn"
            id="bottom_align"
            onClick={[MockFunction]}
            title="Bottom Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-bot.svg"
            />
          </div>
        </div>
        <div
          className="half right"
        >
          <div
            className="btn disabled"
            id="vdist"
            onClick={null}
            title="Vertical Distribute"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-vdist.svg"
            />
          </div>
          <div
            className="btn"
            id="left_align"
            onClick={[MockFunction]}
            title="Left Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-left.svg"
            />
          </div>
          <div
            className="btn"
            id="center_align"
            onClick={[MockFunction]}
            title="Center Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-mid.svg"
            />
          </div>
          <div
            className="btn"
            id="right_align"
            onClick={[MockFunction]}
            title="Right Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-right.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="half left"
        >
          <div
            className="btn"
            id="group"
            onClick={[Function]}
            title="Group"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-group.svg"
            />
          </div>
          <div
            className="btn"
            id="ungroup"
            onClick={[Function]}
            title="Ungroup"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-ungroup.svg"
            />
          </div>
        </div>
        <div
          className="half right"
        >
          <div
            className="btn disabled"
            id="union"
            onClick={null}
            title="Union"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-union.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="subtract"
            onClick={null}
            title="Subtract"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-subtract.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="intersect"
            onClick={null}
            title="Intersect"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-intersect.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="difference"
            onClick={null}
            title="Difference"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-diff.svg"
            />
          </div>
        </div>
      </div>
    </div>
    <DummyDimensionPanel
      elem={
        <g
          id="svg_1"
        />
      }
      getDimensionValues={[MockFunction]}
      updateDimensionValues={[MockFunction]}
    >
      <div>
        This is dummy DimensionPanel
      </div>
    </DummyDimensionPanel>
    <DummyOptionsPanel
      elem={
        <g
          id="svg_1"
        />
      }
      polygonSides={5}
      rx={1}
      updateDimensionValues={[MockFunction]}
      updateObjectPanel={[MockFunction]}
    >
      <div>
        This is dummy OptionsPanel
      </div>
    </DummyOptionsPanel>
    <DummyActionsPanel
      elem={
        <g
          id="svg_1"
        />
      }
    >
      <div>
        This is dummy ActionsPanel
      </div>
    </DummyActionsPanel>
  </div>
</ObjectPanel>
`;

exports[`should render correctly one element not g element 1`] = `
<ObjectPanel
  elem={
    <rect
      id="svg_1"
    />
  }
>
  <div
    className="container"
    id="object-panel"
  >
    <div
      className="tools"
    >
      <div
        className="row"
      >
        <div
          className="half left sep"
        >
          <div
            className="btn disabled"
            id="hdist"
            onClick={null}
            title="Horizontal Distribute"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-hdist.svg"
            />
          </div>
          <div
            className="btn"
            id="top_align"
            onClick={[MockFunction]}
            title="Top Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-top.svg"
            />
          </div>
          <div
            className="btn"
            id="middle_align"
            onClick={[MockFunction]}
            title="Middle Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-mid.svg"
            />
          </div>
          <div
            className="btn"
            id="bottom_align"
            onClick={[MockFunction]}
            title="Bottom Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-bot.svg"
            />
          </div>
        </div>
        <div
          className="half right"
        >
          <div
            className="btn disabled"
            id="vdist"
            onClick={null}
            title="Vertical Distribute"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-vdist.svg"
            />
          </div>
          <div
            className="btn"
            id="left_align"
            onClick={[MockFunction]}
            title="Left Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-left.svg"
            />
          </div>
          <div
            className="btn"
            id="center_align"
            onClick={[MockFunction]}
            title="Center Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-mid.svg"
            />
          </div>
          <div
            className="btn"
            id="right_align"
            onClick={[MockFunction]}
            title="Right Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-right.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="half left"
        >
          <div
            className="btn"
            id="group"
            onClick={[Function]}
            title="Group"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-group.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="ungroup"
            onClick={null}
            title="Ungroup"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-ungroup.svg"
            />
          </div>
        </div>
        <div
          className="half right"
        >
          <div
            className="btn disabled"
            id="union"
            onClick={null}
            title="Union"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-union.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="subtract"
            onClick={null}
            title="Subtract"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-subtract.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="intersect"
            onClick={null}
            title="Intersect"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-intersect.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="difference"
            onClick={null}
            title="Difference"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-diff.svg"
            />
          </div>
        </div>
      </div>
    </div>
    <DummyDimensionPanel
      elem={
        <rect
          id="svg_1"
        />
      }
      getDimensionValues={[MockFunction]}
      updateDimensionValues={[MockFunction]}
    >
      <div>
        This is dummy DimensionPanel
      </div>
    </DummyDimensionPanel>
    <DummyOptionsPanel
      elem={
        <rect
          id="svg_1"
        />
      }
      polygonSides={5}
      rx={1}
      updateDimensionValues={[MockFunction]}
      updateObjectPanel={[MockFunction]}
    >
      <div>
        This is dummy OptionsPanel
      </div>
    </DummyOptionsPanel>
    <DummyActionsPanel
      elem={
        <rect
          id="svg_1"
        />
      }
    >
      <div>
        This is dummy ActionsPanel
      </div>
    </DummyActionsPanel>
  </div>
</ObjectPanel>
`;

exports[`should render correctly two elements contains other types of elements 1`] = `
<ObjectPanel
  elem={
    <g
      data-tempgroup="true"
      id="svg_3"
    >
      <path
        id="svg_1"
      />
      <line
        id="svg_2"
      />
    </g>
  }
>
  <div
    className="container"
    id="object-panel"
  >
    <div
      className="tools"
    >
      <div
        className="row"
      >
        <div
          className="half left sep"
        >
          <div
            className="btn disabled"
            id="hdist"
            onClick={null}
            title="Horizontal Distribute"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-hdist.svg"
            />
          </div>
          <div
            className="btn"
            id="top_align"
            onClick={[MockFunction]}
            title="Top Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-top.svg"
            />
          </div>
          <div
            className="btn"
            id="middle_align"
            onClick={[MockFunction]}
            title="Middle Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-mid.svg"
            />
          </div>
          <div
            className="btn"
            id="bottom_align"
            onClick={[MockFunction]}
            title="Bottom Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-bot.svg"
            />
          </div>
        </div>
        <div
          className="half right"
        >
          <div
            className="btn disabled"
            id="vdist"
            onClick={null}
            title="Vertical Distribute"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-vdist.svg"
            />
          </div>
          <div
            className="btn"
            id="left_align"
            onClick={[MockFunction]}
            title="Left Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-left.svg"
            />
          </div>
          <div
            className="btn"
            id="center_align"
            onClick={[MockFunction]}
            title="Center Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-mid.svg"
            />
          </div>
          <div
            className="btn"
            id="right_align"
            onClick={[MockFunction]}
            title="Right Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-right.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="half left"
        >
          <div
            className="btn"
            id="group"
            onClick={[Function]}
            title="Group"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-group.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="ungroup"
            onClick={null}
            title="Ungroup"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-ungroup.svg"
            />
          </div>
        </div>
        <div
          className="half right"
        >
          <div
            className="btn disabled"
            id="union"
            onClick={null}
            title="Union"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-union.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="subtract"
            onClick={null}
            title="Subtract"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-subtract.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="intersect"
            onClick={null}
            title="Intersect"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-intersect.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="difference"
            onClick={null}
            title="Difference"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-diff.svg"
            />
          </div>
        </div>
      </div>
    </div>
    <DummyDimensionPanel
      elem={
        <g
          data-tempgroup="true"
          id="svg_3"
        >
          <path
            id="svg_1"
          />
          <line
            id="svg_2"
          />
        </g>
      }
      getDimensionValues={[MockFunction]}
      updateDimensionValues={[MockFunction]}
    >
      <div>
        This is dummy DimensionPanel
      </div>
    </DummyDimensionPanel>
    <DummyOptionsPanel
      elem={
        <g
          data-tempgroup="true"
          id="svg_3"
        >
          <path
            id="svg_1"
          />
          <line
            id="svg_2"
          />
        </g>
      }
      polygonSides={5}
      rx={1}
      updateDimensionValues={[MockFunction]}
      updateObjectPanel={[MockFunction]}
    >
      <div>
        This is dummy OptionsPanel
      </div>
    </DummyOptionsPanel>
    <DummyActionsPanel
      elem={
        <g
          data-tempgroup="true"
          id="svg_3"
        >
          <path
            id="svg_1"
          />
          <line
            id="svg_2"
          />
        </g>
      }
    >
      <div>
        This is dummy ActionsPanel
      </div>
    </DummyActionsPanel>
  </div>
</ObjectPanel>
`;

exports[`should render correctly two elements contains rect, polygon or ellipse elements 1`] = `
<ObjectPanel
  elem={
    <g
      data-tempgroup="true"
      id="svg_3"
    >
      <rect
        id="svg_1"
      />
      <ellipse
        id="svg_2"
      />
    </g>
  }
>
  <div
    className="container"
    id="object-panel"
  >
    <div
      className="tools"
    >
      <div
        className="row"
      >
        <div
          className="half left sep"
        >
          <div
            className="btn disabled"
            id="hdist"
            onClick={null}
            title="Horizontal Distribute"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-hdist.svg"
            />
          </div>
          <div
            className="btn"
            id="top_align"
            onClick={[MockFunction]}
            title="Top Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-top.svg"
            />
          </div>
          <div
            className="btn"
            id="middle_align"
            onClick={[MockFunction]}
            title="Middle Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-mid.svg"
            />
          </div>
          <div
            className="btn"
            id="bottom_align"
            onClick={[MockFunction]}
            title="Bottom Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-valign-bot.svg"
            />
          </div>
        </div>
        <div
          className="half right"
        >
          <div
            className="btn disabled"
            id="vdist"
            onClick={null}
            title="Vertical Distribute"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-vdist.svg"
            />
          </div>
          <div
            className="btn"
            id="left_align"
            onClick={[MockFunction]}
            title="Left Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-left.svg"
            />
          </div>
          <div
            className="btn"
            id="center_align"
            onClick={[MockFunction]}
            title="Center Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-mid.svg"
            />
          </div>
          <div
            className="btn"
            id="right_align"
            onClick={[MockFunction]}
            title="Right Align"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-halign-right.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="half left"
        >
          <div
            className="btn"
            id="group"
            onClick={[Function]}
            title="Group"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-group.svg"
            />
          </div>
          <div
            className="btn disabled"
            id="ungroup"
            onClick={null}
            title="Ungroup"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-ungroup.svg"
            />
          </div>
        </div>
        <div
          className="half right"
        >
          <div
            className="btn"
            id="union"
            onClick={[Function]}
            title="Union"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-union.svg"
            />
          </div>
          <div
            className="btn"
            id="subtract"
            onClick={[Function]}
            title="Subtract"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-subtract.svg"
            />
          </div>
          <div
            className="btn"
            id="intersect"
            onClick={[Function]}
            title="Intersect"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-intersect.svg"
            />
          </div>
          <div
            className="btn"
            id="difference"
            onClick={[Function]}
            title="Difference"
          >
            <img
              draggable={false}
              src="img/right-panel/icon-diff.svg"
            />
          </div>
        </div>
      </div>
    </div>
    <DummyDimensionPanel
      elem={
        <g
          data-tempgroup="true"
          id="svg_3"
        >
          <rect
            id="svg_1"
          />
          <ellipse
            id="svg_2"
          />
        </g>
      }
      getDimensionValues={[MockFunction]}
      updateDimensionValues={[MockFunction]}
    >
      <div>
        This is dummy DimensionPanel
      </div>
    </DummyDimensionPanel>
    <DummyOptionsPanel
      elem={
        <g
          data-tempgroup="true"
          id="svg_3"
        >
          <rect
            id="svg_1"
          />
          <ellipse
            id="svg_2"
          />
        </g>
      }
      polygonSides={5}
      rx={1}
      updateDimensionValues={[MockFunction]}
      updateObjectPanel={[MockFunction]}
    >
      <div>
        This is dummy OptionsPanel
      </div>
    </DummyOptionsPanel>
    <DummyActionsPanel
      elem={
        <g
          data-tempgroup="true"
          id="svg_3"
        >
          <rect
            id="svg_1"
          />
          <ellipse
            id="svg_2"
          />
        </g>
      }
    >
      <div>
        This is dummy ActionsPanel
      </div>
    </DummyActionsPanel>
  </div>
</ObjectPanel>
`;
